Corrected issues related to installRelease gradle task